syntax = "proto3";
package namsicdkvpb;

message Item {
    bytes key = 1;
    bytes value = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
}

message DeleteRequest {
    bytes key = 1;
    bytes key_end = 2;
}

message DeleteResponse {
}

service KV {
    rpc Put(PutRequest) returns (PutResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}
